--- a/templates/register.html
+++ b/templates/register.html
@@ -109,10 +109,6 @@
         <img src="static/images/logo.png" alt="Logo" />
         Online Bookstore
       </div>
-      <nav class="nav">
-        <a href="/" class="nav-link">Home</a>
-        <a href="/login" class="nav-link">Login</a>
-      </nav>
     </header>
     <main class="main">
       <div class="form-container">
@@ -121,12 +117,29 @@
           <p class="error">{{ error }}</p>
         {% endif %}
         <form method="POST" action="/register">
-          <input type="email" name="email" placeholder="Email" required />
-          <input type="password" name="password" placeholder="Password" required />
-          <input type="text" name="firstName" placeholder="First Name" required />
-          <input type="text" name="lastName" placeholder="Last Name" required />
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required><br>
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" required><br>
+          <label for="firstName">First Name:</label>
+          <input type="text" id="firstName" name="firstName" required><br>
+          <label for="lastName">Last Name:</label>
+          <input type="text" id="lastName" name="lastName" required><br>
+          <label for="country">Country:</label>
+          <input type="text" id="country" name="country" required><br>
+          <label for="street1">Street 1:</label>
+          <input type="text" id="street1" name="street1" required><br>
+          <label for="street2">Street 2:</label>
+          <input type="text" id="street2" name="street2"><br>
+          <label for="city">City:</label>
+          <input type="text" id="city" name="city" required><br>
+          <label for="province">Province:</label>
+          <input type="text" id="province" name="province" required><br>
+          <label for="zip">Zip Code:</label>
+          <input type="text" id="zip" name="zip" required><br>
           <button type="submit">Register</button>
         </form>
+        <p>    Already have an account? <a href="/login">Login</a></p> <!-- Added link to go to login page -->
       </div>
     </main>
   </div>
