--- a/templates/index.html
+++ b/templates/index.html
@@ -197,7 +197,11 @@
     <main class="main">
       {% for product in products %}
       <div class="book">
-        <img src="static/images/book.png" alt="Book cover image" class="book-image" /> 
+        {% if product.image_url %}
+          <img src="{{ product.image_url }}" alt="Book cover image" class="book-image" /> 
+        {% else %}
+          <img src="static/images/book.png" alt="Book cover image" class="book-image" /> 
+        {% endif %} 
         <div class="book-info">
           <h3 class="book-title">{{ product.name }}</h3>
           <p class="book-author">{{ product.author }}</p>
