--- a/templates/login.html
+++ b/templates/login.html
@@ -117,7 +117,7 @@
   <div class="container">
     <header class="header">
       <div class="logo">
-        <img src="static/images/logo.png" alt="Logo" />
+        <img src="http://localhost:9000/products/products/logo.png" alt="Logo" />
         Online Bookstore
       </div>
     </header>
