--- a/templates/view_cart.html
+++ b/templates/view_cart.html
@@ -100,7 +100,7 @@
   <div class="container">
     <header class="header">
       <div class="logo">
-        <img src="static/images/logo.png" alt="Logo" />
+        <img src="http://localhost:9000/products/products/logo.png" alt="Logo" />
         Online Bookstore
       </div>
       <nav class="nav">
