--- a/templates/index.html
+++ b/templates/index.html
@@ -242,6 +242,7 @@
           <div class="dropdown-content">
             <a href="/home/my_account"><i class="fas fa-user-circle"></i> View Account</a>
             <a href="/home/edit_account"><i class="fas fa-edit"></i> Edit Details</a>
+            <a href="/home/change_password"><i class="fas fa-key"></i> Change Password</a>
             <a href="#" onclick="viewOrders()"><i class="fas fa-box"></i> View Orders</a>
             <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
           </div>
@@ -270,7 +271,7 @@
     </main>
 
     <footer class="footer">
-      <p>Copyright &copy; 2023 Online Bookstore</p>
+      <p>Copyright &copy; 2024 Online Bookstore</p>
     </footer>
   </div>
 
