--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -49,7 +49,7 @@
     .nav {
       display: flex;
       align-items: center;
-      margin-left: 1000px;
+      margin-left: 880px;
       gap: 2rem; /* Adjusted gap */
       flex-grow: 1;
     }
@@ -136,6 +136,7 @@
       <nav class="nav">
         <a href="/home" class="nav-link"><i class="fas fa-home"></i> Home</a>
         <a href="/home/edit_account" class="nav-link"><i class="fas fa-edit"></i> Edit Account</a>
+        <a href="/home/change_password" class="nav-link"><i class="fas fa-key"></i> Change Password</a>
         <a href="/view_orders" class="nav-link"><i class="fas fa-box"></i> View Orders</a>
         <a href="#" class="nav-link" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
       </nav>
@@ -152,7 +153,7 @@
       </div>
     </main>
     <footer class="footer">
-      <p>&copy; 2023 Online Bookstore</p>
+      <p>&copy; 2024 Online Bookstore</p>
     </footer>
   </div>
 
